<resources>
    <string name="app_name">Noto</string>
    <string name="navigation_view_notes">Notes</string>
    <string name="navigation_view_archive">Recycle bin</string>
    <string name="navigation_view_settings">Settings</string>
    <string name="navigation_view_about">About program</string>
    <string name="activity_about_build_time">Build Date</string>
    <string name="activity_about_app_version">Application version</string>
    <string name="app_author">Roman Sharipov</string>
    <string name="activity_about_author">Application Author</string>
    <string name="activity_note_detail_action_restore">Restore</string>
    <string name="activity_note_detail_action_panel">Actions</string>
    <string name="activity_note_detail_color">Color selection</string>
    <string name="activity_note_detail_action_delete">Delete</string>
    <string name="activity_note_detail_action_copy">Create a copy</string>
    <string name="shortcuts_add_note">New note</string>
    <string name="shortcuts_add_note_long">New note</string>
    <string name="activity_note_detail_last_change">\'Last updated:\' dd MMMM, yyyy \'at\' hh:mm</string>
    <string name="activity_about_build_time_format">dd MMMM, yyyy \'at\' hh:mm</string>
    <string name="activity_note_detail_title">Title</string>
    <string name="activity_note_detail_text">Text</string>
    <string name="activity_settings_column">Number of columns</string>
    <string name="activity_settings_delete_base">Delete database</string>
    <string name="activity_settings_delete_base_detail">Delete all notes, photos, audio recordings, etc.</string>
    <string name="activity_settings_column_one">One</string>
    <string name="activity_settings_column_two">Two</string>
    <string name="activity_settings_column_three">Three</string>
    <string name="activity_notes_delete_archive">Delete all</string>
    <string name="activity_notes_delete_archive_text">Are you sure you want to empty the trash?</string>
    <string name="activity_notes_delete_archive_yes">Delete</string>
    <string name="activity_notes_delete_archive_no">Cancel</string>
    <string name="activity_notes_delete_placeholder">You have no notes</string>
    <string name="activity_note_detail_action_archive">Delete</string>
    <string name="activity_note_detail_action_share">Share</string>
    <string name="activity_notes_change_color_title">Color selection</string>
    <string name="activity_notes_search">Search</string>
    <string name="activity_note_detail_action_hashtag">Hashtag</string>
    <string name="activity_choose_hashtag_empty">You don\'t have hashtags</string>
    <string name="activity_notes_hashtag_more">more</string>
    <string name="navigation_view_hashtags">Hashtags</string>
    <string name="navigation_view_add_hashtag">Add hashtag</string>
    <string name="navigation_view_hashtags_title">Hashtags</string>
    <string name="navigation_view_hashtags_change">Change</string>
    <string name="activity_settings_alert_delete_message">Are you sure you want to delete the entire database?</string>
    <string name="activity_settings_alert_delete_title">Delete database</string>
    <string name="activity_settings_alert_delete_yes">Delete</string>
    <string name="activity_settings_alert_delete_no">Cancel</string>
    <string name="activity_choose_hashtag_add">Add hashtag</string>
    <string name="activity_choose_hashtag_enter_name">Enter hashtag name</string>
    <string name="activity_choose_hashtag_icon_add">Add hashtag</string>
    <string name="activity_choose_hashtag_icon_h">Hashtag</string>
    <string name="activity_edit_hashtags_alert_title">Delete</string>
    <string name="activity_edit_hashtags_alert_message">The hashtag will be removed. It will disappear from all notes, but the notes themselves will be preserved</string>
    <string name="activity_edit_hashtags_alert_delete_yes">Delete</string>
    <string name="activity_edit_hashtags_alert_delete_no">Cancel</string>
    <string name="activity_edit_hashtags_add_hashtag">Add hashtag</string>
</resources>
