<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:entries="@array/columnsName"
        android:entryValues="@array/columns"
        android:key="columns_list"
        android:title="@string/activity_settings_column"
        android:defaultValue="2"
        android:summary="%s"
        app:iconSpaceReserved="false"
        android:enabled="true"
        />


    <PreferenceScreen
        android:key="delete_base"
        android:title="@string/activity_settings_delete_base"
        android:summary="@string/activity_settings_delete_base_detail"
        app:iconSpaceReserved="false"
        android:enabled="true"
        />

</PreferenceScreen>