<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_note_detail_color_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:clipToPadding="false" />


    <LinearLayout
        android:id="@+id/activity_note_detail_action_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_content_copy"
            android:drawablePadding="20dp"
            android:textSize="16sp"
            android:padding="10dp"
            app:drawableTint="@color/notesDetailPanelIcon"
            android:text="@string/activity_note_detail_action_copy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_note_detail_action_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_share"
            android:drawablePadding="20dp"
            android:textSize="16sp"
            android:padding="10dp"
            app:drawableTint="@color/notesDetailPanelIcon"
            android:text="@string/activity_note_detail_action_share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_note_detail_action_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_delete"
            android:drawablePadding="20dp"
            android:textSize="16sp"
            android:padding="10dp"
            app:drawableTint="@color/notesDetailPanelIcon"
            android:text="@string/activity_note_detail_action_archive" />
    </LinearLayout>


    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="18dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_color_lens"
            android:drawablePadding="20dp"
            android:textSize="16sp"
            android:text="@string/activity_note_detail_color" />
    </LinearLayout-->


</LinearLayout>